--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,6 @@
     <p>Email - sharmilablue03@gmail.com - <a href="mailto:sharmilablue03@gmail.com">email me</a></p>
     <hr>
 
-    <a href="C:\Users\SHARMILA\OneDrive\Documents\Web dev\form.html"> Fill the form </a>
+    <a href="form.html"> Fill the form </a>
   </body>
 </html>
